fix: remove dynamic content link icon styling, because the only thing it does is break the styling

--- a/components/DynamicContent/src/index.scss
+++ b/components/DynamicContent/src/index.scss
@@ -13,13 +13,6 @@
   height: fit-content;
 }
 
-.denhaag-dynamic-content--list .denhaag-link__icon {
-  align-self: flex-start;
-  flex-shrink: 0;
-  flex-grow: 0;
-  flex-basis: inherit;
-}
-
 .denhaag-dynamic-content__grid {
   display: grid;
   grid-template-columns: repeat(var(--denhaag-dynamic-content-grid-columns, 1), 1fr);
